// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spots page should render correctly with a few spots 1`] = `
<TheTable
  columns={
    Array [
      Object {
        "name": "Trans(i18nKey=name)",
        "sorter": [Function],
      },
      Object {
        "name": "Trans(i18nKey=requiredSkillSet)",
      },
    ]
  }
  filterText=""
  filteredRows={
    Immutable.List [
      Object {
        "id": 1,
        "name": "Spot 1",
        "requiredSkillSet": Array [],
        "tenantId": 0,
        "version": 0,
      },
      Object {
        "id": 2,
        "name": "Spot 2",
        "requiredSkillSet": Array [
          Object {
            "id": 0,
            "name": "Skill 1",
            "tenantId": 0,
            "version": 0,
          },
        ],
        "tenantId": 0,
        "version": 0,
      },
    ]
  }
  history={
    Object {
      "action": "PUSH",
      "block": [MockFunction],
      "createHref": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goForward": [MockFunction],
      "length": 1,
      "listen": [MockFunction],
      "location": Object {
        "hash": "",
        "pathname": "/0/spot",
        "search": "",
        "state": undefined,
      },
      "push": [MockFunction],
      "replace": [MockFunction],
    }
  }
  isReversed={true}
  itemsPerPage={10}
  location={
    Object {
      "hash": "",
      "pathname": "/0/spot",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/0/spot",
      "url": "localhost:8080/0/spot",
    }
  }
  newRowWrapper={[Function]}
  numOfFilteredRows={2}
  onSorterChange={[Function]}
  page={1}
  rowWrapper={[Function]}
  rowsInPage={
    Immutable.List [
      Object {
        "id": 1,
        "name": "Spot 1",
        "requiredSkillSet": Array [],
        "tenantId": 0,
        "version": 0,
      },
      Object {
        "id": 2,
        "name": "Spot 2",
        "requiredSkillSet": Array [
          Object {
            "id": 0,
            "name": "Skill 1",
            "tenantId": 0,
            "version": 0,
          },
        ],
        "tenantId": 0,
        "version": 0,
      },
    ]
  }
  sortByIndex={0}
  title="Trans(i18nKey=spots)"
/>
`;

exports[`Spots page should render correctly with no spots 1`] = `
<TheTable
  columns={
    Array [
      Object {
        "name": "Trans(i18nKey=name)",
        "sorter": [Function],
      },
      Object {
        "name": "Trans(i18nKey=requiredSkillSet)",
      },
    ]
  }
  filterText=""
  filteredRows={Immutable.List []}
  history={
    Object {
      "action": "PUSH",
      "block": [MockFunction],
      "createHref": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goForward": [MockFunction],
      "length": 1,
      "listen": [MockFunction],
      "location": Object {
        "hash": "",
        "pathname": "/0/spot",
        "search": "",
        "state": undefined,
      },
      "push": [MockFunction],
      "replace": [MockFunction],
    }
  }
  isReversed={true}
  itemsPerPage={10}
  location={
    Object {
      "hash": "",
      "pathname": "/0/spot",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/0/spot",
      "url": "localhost:8080/0/spot",
    }
  }
  newRowWrapper={[Function]}
  numOfFilteredRows={0}
  onSorterChange={[Function]}
  page={1}
  rowWrapper={[Function]}
  rowsInPage={Immutable.List []}
  sortByIndex={0}
  title="Trans(i18nKey=spots)"
/>
`;

exports[`Spots page should render the editor correctly 1`] = `
<TableRow>
  <TableCell>
    <TextInput
      onChange={[Function]}
      value="Spot"
    />
  </TableCell>
  <TableCell>
    <MultiTypeaheadSelectInput
      emptyText="Trans(i18nKey=selectRequiredSkills)"
      onChange={[Function]}
      optionToStringMap={[Function]}
      options={
        Array [
          Object {
            "id": 0,
            "name": "Skill 1",
            "tenantId": 0,
            "version": 0,
          },
        ]
      }
      value={Array []}
    />
  </TableCell>
  <RowEditButtons
    isValid={true}
    onClose={[Function]}
    onSave={[Function]}
  />
</TableRow>
`;

exports[`Spots page should render the viewer correctly 1`] = `
<TableRow>
  <TableCell>
    <Flex>
      <FlexItem>
        <Text>
          Spot 2
        </Text>
      </FlexItem>
      <FlexItem>
        <Button
          onClick={[Function]}
          variant="link"
        >
          <ArrowIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Button>
      </FlexItem>
    </Flex>
  </TableCell>
  <TableCell>
    <ChipGroup
      aria-label="Chip group category"
      categoryName=""
      closeBtnAriaLabel="Close chip group"
      collapsedText="\${remaining} more"
      defaultIsOpen={false}
      expandedText="Show Less"
      isClosable={false}
      numChips={3}
      onClick={[Function]}
      onOverflowChipClick={[Function]}
      tooltipPosition="top"
    >
      <Chip
        className=""
        closeBtnAriaLabel="close"
        component="div"
        isOverflowChip={false}
        isReadOnly={true}
        key="Skill 1"
        onClick={[Function]}
        tooltipPosition="top"
      >
        Skill 1
      </Chip>
    </ChipGroup>
  </TableCell>
  <RowViewButtons
    onDelete={[Function]}
    onEdit={[Function]}
  />
</TableRow>
`;
